# Mag1Cource

./: README.md
2sem/NLP/: CMakeLists.txt  main.cpp
2sem/NLP/FrontEnd/: app.py  bbb.py  form_class.py
2sem/NLP/FrontEnd/templates/: _formhelpers.html  index.html
2sem/NLP/MetricsEvaluator/: MetricEvaluator.py  Zyph.py
2sem/NLP/MetricsEvaluator/labl2_stats/: google.txt  my.txt  tf_idf_stem.txt  wikipedia.txt  yandex.txt
2sem/NLP/MetricsEvaluator/metric/: Dcg.py  Err.py  Metric.py  Ndcg.py  Precision.py
2sem/NLP/docs/: queries.txt
2sem/NLP/src/: CMakeLists.txt  Common.h  main.cpp
2sem/NLP/src/compression/: VariableByte.h  VariableByteEncoder.h
2sem/NLP/src/dto/: BucketIndex.h  Document.h  Index.h  Query.h  QueryItem.h  TermIndex.h
2sem/NLP/src/index/: BucketIndex.h  FrequencyIndex.h  Index.h  IndexLoader.h  IndexSaver.h  Indexer.h
2sem/NLP/src/labs/is/: lab3.cpp  lab4.cpp  lab6.cpp  lab8.cpp
2sem/NLP/src/labs/nlp/: lab1.cpp  lab2.cpp  lab3.cpp
2sem/NLP/src/myStl/: BucketHashMap.h  BucketHashSet.h  HashMap.h  HashSet.h  Pair.h  String.h  Vector.h
2sem/NLP/src/myStl/String/: String.h
2sem/NLP/src/myStl/Vector/: Vector.cpp  Vector.h  VectorImpl.h
2sem/NLP/src/parser/: CorpusParser.h  ParserUtils.h  QueryParser.h
2sem/NLP/src/query/: FileQueriesProcessor.h  HtmlGenerator.h  Query.h  QueryItem.h  QueryOperation.h  QueryParser.h  QueryProcessor.h  QueryService.h
2sem/NLP/src/query/ranking/: TfIdf.h
2sem/NLP/src/query/snippets/: SnippetGenerator.h
2sem/NLP/src/tokenization/: Stemming.h  Terms.h  Tokenization.h  ZiphStatistics.h
2sem/NLP/test/: CMakeLists.txt  testMain.cpp
2sem/NLP/test/compression/: VariableByteTest.cpp
2sem/NLP/test/myStl/: HashSetTest.cpp  StringTest.cpp  VectorTest.cpp
2sem/NLP/test/query/: QueryOperationTest.cpp  QueryTest.cpp
